[package]
name = "rusty-pi"
version = "0.1.0"
edition = "2021"

[dependencies]
mosquitto-rs = "0.11.2"
openssl = "0.10.68"
rppal = "0.19"
paho-mqtt = "0.12.5"
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1", features = ["full"] }